# 2fish

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/2fish/: config.h  constants.h
include/2fish/aggregator/: aggregator.h
include/2fish/dispatcher/: dispatcher.h
include/2fish/driver/: driver.h
include/2fish/engine/: engine.h  market_engine.h
include/2fish/market_store/: market_store.h
include/2fish/models/: book_snapshot.h  candlestick.h  event_type.h  market_accumulation.h  market_snapshot.h  order_book_diff.h  order_book_snapshot.h  orderbook_snapshot.h  price_change.h  trade.h  types.h
include/2fish/network/: network_buffer_pool.h  websocket_client.h
include/2fish/order_book/: book_manager.h  order_book.h  order_book_manager.h
include/2fish/parser/: parser.h  parser_buffer_pool.h
include/2fish/renderer/: chart_renderer.h  heatmap_lookup.h  renderer.h  renderer_slice.h
include/2fish/utils/: lru_cache.h  ring_buffer.h  seq_lock_ring_buffer.h  timeseries_cache.h  triple_buffer.h
include/cpp-httplib/: httplib.h
include/moodycamel/: atomicops.h  concurrentqueue.h  readerwriterqueue.h
src/: CMakeLists.txt  config.h  config.hpp  constants.hpp  main.cpp
src/2fish/: main.cpp
src/2fish/aggregator/: aggregator.cpp
src/2fish/dispatcher/: dispatcher.cpp
src/2fish/driver/: driver.cpp
src/2fish/engine/: engine.cpp
src/2fish/market_store/: market_store.cpp
src/2fish/network/: network_buffer_pool.cpp  websocket_client.cpp
src/2fish/order_book/: order_book.cpp  order_book_manager.cpp
src/2fish/parser/: parser.cpp  parser_buffer_pool.cpp
src/2fish/renderer/: chart_renderer.cpp  heatmap_lookup.cpp  renderer.cpp
src/common/: types.hpp  websocket_data_types.hpp
src/common/containers/: deque.hpp  latest_snapshot_buffer.hpp  object_pool.hpp  ring_buffer.hpp  seqlock_wrapper.hpp  simple_deque.hpp  swmr_map.hpp
src/common/core/: rest_data_types.hpp  types.hpp  websocket_data_types.hpp
src/common/utils/: compute_time_bucket.hpp  cpu_relax.hpp  format_with_commas.hpp  parse_json_double.hpp  price_round.hpp  set_query_params.hpp
src/driver/: driver.cpp  driver.hpp
src/engine/: engine.cpp  engine.hpp
src/engine/store/: candlestick_store.cpp  candlestick_store.hpp  orderbook_store.cpp  orderbook_store.hpp
src/network/auth/: generate_headers.cpp  generate_headers.hpp
src/network/rest/: https_session.cpp  https_session.hpp  persistent_connection.cpp  persistent_connection.hpp  rest_client.cpp  rest_client.hpp  rest_parser.cpp  rest_parser.hpp
src/network/websocket/: websocket_client.cpp  websocket_client.hpp  websocket_parser.cpp  websocket_parser.hpp
src/renderer/: application.cpp  application.hpp  theme.hpp
src/renderer/component/: chart_view.cpp  chart_view.hpp  component.hpp  component_manager.cpp  component_manager.hpp  market_depth.cpp  market_depth.hpp  orderbook_levels.cpp  orderbook_levels.hpp  orderbook_view.cpp  orderbook_view.hpp  trade_ledger.cpp  trade_ledger.hpp
src/renderer/component/widgets/: button.cpp  button.hpp
tests/: CMakeLists.txt  test_rest_parser.cpp  test_websocket_parser.cpp
tests/2fish/order_book/: test_order_book.cpp
tests/2fish/parser/: test_parser.cpp
